<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_welcome_logo_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_welcome_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="96dp"
            android:src="@mipmap/iv_main_logo" />

        <LinearLayout
            android:id="@+id/ll_welcome_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="5dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_edit_text"
                android:drawableLeft="@mipmap/ic_edit_text_email"
                android:drawablePadding="10dp"
                android:hint="@string/fieldHintEmail"
                android:inputType="textEmailAddress"
                android:maxLength="48"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_edit_text"
                android:drawableLeft="@mipmap/ic_edit_text_password"
                android:drawablePadding="10dp"
                android:hint="@string/fieldHintPassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@null"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_button"
                android:padding="10dp"
                android:text="@string/buttonLogin"
                android:textColor="@drawable/button_text_color"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_button"
                android:padding="10dp"
                android:text="@string/buttonRegister"
                android:textColor="@drawable/button_text_color"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/textViewForgotPassword"
                android:textColor="#ffffff"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
    </LinearLayout>