<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_for_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <LinearLayout
        android:id="@+id/ll_map_hud"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:background="@drawable/background_map_hud">

        <ImageView
            android:id="@+id/iv_map_hud_lights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:layout_gravity="center_horizontal|top"
            android:background="@mipmap/ic_map_alert_lights_normal"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_map_hud_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12dp"
                android:typeface="serif"
                android:textStyle="bold"
                android:text="@string/messageAcquiringCurrentLocationForHUD1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12dp"
                android:typeface="serif"
                android:textStyle="bold"
                android:text="@string/messageAcquiringCurrentLocationForHUD2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12dp"
                android:typeface="serif"
                android:textStyle="bold"
                android:text="@string/messageAcquiringCurrentLocationForHUD3"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_map_hud_speedometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="-2dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/tv_map_hud_speedometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-4dp"
                android:textSize="42dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:typeface="monospace"/>
            <TextView
                android:id="@+id/tv_map_hud_speedometer_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="-4dp"
                android:textSize="8dp"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="km/h"
                android:typeface="monospace"/>
        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_map_buttons_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="28dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ib_map_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_map_current_location" />

        <ImageButton
            android:id="@+id/ib_map_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_map_type_satellite" />

        <ImageButton
            android:id="@+id/ib_map_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_map_settings" />

        <ImageButton
            android:id="@+id/ib_map_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_map_type_register" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_map_info_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="48dp"
        android:visibility="gone"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:paddingTop="64dp"
            android:orientation="vertical"
            android:background="@drawable/background_map_info">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:text="@string/messageWelcomeToSpeedTrap"/>

            <TextView
                android:id="@+id/tv_map_fragment_info_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:textSize="14dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_map_fragment_info_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>

</RelativeLayout>